lots of changes!

--- a/DanceAI/src/App.css
+++ b/DanceAI/src/App.css
@@ -1,9 +1,5 @@
-.scroll-button-down:hover {
-    animation: moveMenushow 0.6s linear forwards;
-  }
-
-  @keyframes moveMenushow {
-    100% {
-      transform: translateY(-40%);
-    }
+html, body {
+    background-color: black;
+    margin: 0; /* Reset default margin */
+    padding: 0; /* Reset default padding */
   }
